美化了ui 增加了底部说明

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<li class="layui-nav-item " lay-unselect><a style="color:white; font-size:18px; " href="">酷解析</a></li>
 		<!-- 右上角导航 -->
 		<li class="layui-nav-item layui-layout-right">
-			<a href="javascript:">关于我们ii</a>
+			<a href="javascript:">关于我们</a>
 			<dl class="layui-nav-child ">
 				<dd class="t-right-nav" style=""><a href="">关于我们</a></dd>
 				<dd class="t-right-nav"><a href="">联系我们</a></dd>
@@ -36,44 +36,44 @@
 		<input style="margin-top:14px;" class="layui-btn-danger layui-btn layui-col-xs8 layui-col-xs-offset2 layui-col-md4 layui-col-md-offset4 layui-col-lg4 layui-col-lg-offset4"type="button" value="解析">
 	</div>
 </div>
-
-<div class="server-show-container">
+<div style="background-color: #03a9f4"  class="server-show-container">
 	<div class="server-show-title-container">
-		<h1>提供全天24H服务</h1>
-	</div>
-	<div class="server-show-msg-container">
-		<p>服务器无间断运行，全时间段为你提供服务</p>
-	</div>
-</div>
-<div class="server-show-container">
-	<div class="server-show-title-container">
-		<h1>独创算法</h1>
-	</div>
-	<div class="server-show-msg-container">
-		<p>API接口均为良伟API提供</p>
-	</div>
-</div>
-<div class="server-show-container">
-	<div class="server-show-title-container">
-		<h1>服务器位于国内</h1>
+		<p>国内机房</p>
 	</div>
 	<div class="server-show-msg-container">
 		<p>为你提供最优的体验速度</p>
 	</div>
 </div>
-<div class="server-show-container">
+<div style="background-color: #2196f3"  class="server-show-container">
 	<div class="server-show-title-container">
-		<h1>联系客服</h1>
+		<p>独创算法</p>
 	</div>
 	<div class="server-show-msg-container">
-		<p>全天为你服务</p>
+		<p>ApI接口均为良伟Api提供</p>
+	</div>
+</div>
+<div style="background-color: #673ab7" class= "server-show-container">
+	<div class="server-show-title-container">
+		<p>24H服务</p>
+	</div>
+	<div class="server-show-msg-container">
+		<p>服务器无间断运行，全时间段为你提供服务</p>
 	</div>
 </div>
 
-<div class="footer">
-	<p class="t-center layui-text">良伟网络工作室</p>
-	<p class="layui-text t-center" style="font-size:10px;">备案信息</p>
+
+
+<div style="border-bottom: 0px; background-color: #2f4056" class="server-show-container">
+	<div class="server-show-title-container">
+		<p style="color: #01AAED;" class="layui-table-link">联系客服</p>
+	</div>
+	<div style="" class="">
+		<p class="t-center layui-text">良伟网络工作室</p>
+		<p class="layui-text t-center" style="font-size:10px;">备案信息</p>
+	</div>
+
 </div>
+
 
 </body>
 
