--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="layui-timeline-content layui-text">
 			<h3 class="layui-timeline-title">2019.1.1</h3>
 			<p>
-				新的一年先写个项目练练手
+				新的一年先写个项目练练手pushtest
 				<br>不枉近百个日日夜夜与之为伴。因小而大，因弱而强。
 				<br>无论它能走多远，抑或如何支撑？至少我曾倾注全心，无怨无悔 <i class="layui-icon"></i>
 			</p>
