add api and meihua ui

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <div style="margin-top:20px;" class="layui-form-item">
 	<div class="layui-col-xs10 layui-col-xs-offset1 layui-col-md8 layui-col-md-offset2 layui-col-lg4 layui-col-lg-offset4">
 		<input  class="layui-input" placeholder="link">
-		<input style="margin-top:14px;" class="layui-btn-danger layui-btn layui-col-xs8 layui-col-xs-offset2 layui-col-md4 layui-col-md-offset4 layui-col-lg4 layui-col-lg-offset4"type="button" value="解析">
+	
+      <button style="margin-top:14px;" class="layui-btn-danger layui-btn layui-col-xs8 layui-col-xs-offset2 layui-col-md4 layui-col-md-offset4 layui-col-lg4 layui-col-lg-offset4">解析<i class="layui-icon layui-icon-search"></i> </button>
 	</div>
 </div>
 
