--- a/index.html
+++ b/index.html
@@ -1,116 +1,119 @@
 <!DOCTYPE html>
 <html>
-<body>
-<!-- 顶部toolbar -->
-<div class="toolbar layui-bg-blue">
-	<ul class="layui-nav layui-bg-blue" style="padding:0px;">
-		<li class="layui-nav-item " lay-unselect><a style="color:white; font-size:18px; " href="">酷解析</a></li>
-		<!-- 右上角导航 -->
-		<li class="layui-nav-item layui-layout-right">
-			<a href="javascript:">关于我们</a>
-			<dl class="layui-nav-child ">
-				<dd class="t-right-nav" style=""><a href="">关于我们</a></dd>
-				<dd class="t-right-nav"><a href="">联系我们</a></dd>
-				<dd class="t-right-nav"><a class="" href="">加入我们</a></dd>
-			</dl>
-		</li>
-	</ul>
-</div>
-
-<p class="header-intro">本站现已支持解析<span>快手,抖音,微视,秒拍等</span>短视频平台 </p>
-<div class="t-center">
-	<img style="margin-top:5px; margin-bottom:10px;" class="head" src="http://q1.qlogo.cn/g?b=qq&nk=1947504030&s=100" />
-</div>
-<h2 style=" margin-left:20px; color:#1E9FFF;" class="">使用说明</h2>
-<div style="padding-left:30px;  ">
-	<ul style="list-style-type:circle; ">
-		<li class="layui-text">1. 打开短视频视频APP，点开某个视频，点击分享按钮，在分享弹框中点击复制链接或通过分享到微信QQ等获取分享链接</li>
-		<li class="layui-text">2. 将刚才复制的链接粘贴到下面的输入框,点击解析</li>
-	</ul>
-</div>
-<p style="color:red;font-size:25px; margin-top: 10px; text-align: center;">点我查看视频教程</p>
-
-<div style="margin-top:20px;" class="layui-form-item">
-	<div class="layui-col-xs10 layui-col-xs-offset1 layui-col-md8 layui-col-md-offset2 layui-col-lg4 layui-col-lg-offset4">
-		<input  class="layui-input" placeholder="link">
-	
-      <button style="margin-top:14px;" class="layui-btn-danger layui-btn layui-col-xs8 layui-col-xs-offset2 layui-col-md4 layui-col-md-offset4 layui-col-lg4 layui-col-lg-offset4">解析<i class="layui-icon layui-icon-search"></i> </button>
-	</div>
-</div>
-
-<ul class="layui-timeline">
-	<li class="layui-timeline-item">
-		<i class="layui-icon layui-timeline-axis">&#xe63f;</i>
-		<div class="layui-timeline-content layui-text">
-			<h3 class="layui-timeline-title">2019.1.1</h3>
-			<p>
-				新的一年先写个项目练练手 push text
-				<br>不枉近百个日日夜夜与之为伴。因小而大，因弱而强。
-				<br>无论它能走多远，抑或如何支撑？至少我曾倾注全心，无怨无悔 <i class="layui-icon"></i>
-			</p>
-		</div>
-	</li>
-	<li class="layui-timeline-item">
-		<i class="layui-icon layui-timeline-axis">&#xe63f;</i>
-		<div class="layui-timeline-content layui-text">
-			<h3 class="layui-timeline-title">2019.1.13</h3>
-			<p>
-				Cool parse的一切准备工作似乎都已到位。发布之弦，一触即发。
-				<br>不枉近百个日日夜夜与之为伴。因小而大，因弱而强。
-				<br>无论它能走多远，抑或如何支撑？至少我曾倾注全心，无怨无悔 <i class="layui-icon"></i>
-			</p>
-		</div>
-	</li>
-</ul>
-<div style="margin-top:80px;background-color: #03a9f4"  class="server-show-container ">
-	<div class="server-show-title-container">
-		<p>国内机房</p>
-	</div>
-	<div class="server-show-msg-container">
-		<p>为你提供最优的体验速度</p>
-	</div>
-</div>
-<div style="background-color: #2196f3"  class="server-show-container">
-	<div class="server-show-title-container">
-		<p>独创算法</p>
-	</div>
-	<div class="server-show-msg-container">
-		<p>ApI接口均为良伟Api提供</p>
-	</div>
-</div>
-<div style="background-color: #673ab7" class= "server-show-container">
-	<div class="server-show-title-container">
-		<p>24H服务</p>
-	</div>
-	<div class="server-show-msg-container">
-		<p>服务器无间断运行，全时间段为你提供服务</p>
-	</div>
-</div>
-
-
-
-<div style="border-bottom: 0px; background-color: #2f4056" class="server-show-container">
-	<div class="server-show-title-container">
-		<p style="color: #01AAED;" class="layui-table-link">联系客服</p>
-	</div>
-	<div style="" class="">
-		<p class="t-center layui-text">良伟网络工作室</p>
-		<p class="layui-text t-center" style="font-size:10px;">备案信息</p>
-	</div>
-
-</div>
-
-
-</body>
-
-<head>
+  <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href="css/app.css" rel="stylesheet">
 	<link href="libs/layui/css/layui.css" rel="stylesheet">
 	<script src="libs/layui/layui.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/parse.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>酷解析</title>
-</head>
+  </head>
+
+  <body>
+	<!-- 顶部toolbar -->
+	<div class="toolbar layui-bg-blue">
+	  <ul class="layui-nav layui-bg-blue" style="padding:0px;">
+		<li class="layui-nav-item " lay-unselect><a style="color:white; font-size:18px; " href="">酷解析</a></li>
+		<!-- 右上角导航 -->
+		<li class="layui-nav-item layui-layout-right">
+		  <a href="javascript:">关于我们</a>
+		  <dl class="layui-nav-child ">
+			<dd class="t-right-nav" style=""><a href="">关于我们</a></dd>
+			<dd class="t-right-nav"><a href="">联系我们</a></dd>
+			<dd class="t-right-nav"><a class="" href="">加入我们</a></dd>
+		  </dl>
+		</li>
+	  </ul>
+	</div>
+
+	<p class="header-intro">本站现已支持解析<span>快手,抖音,微视,秒拍等</span>短视频平台 </p>
+	<div class="t-center">
+	  <img style="margin-top:5px; margin-bottom:10px;" class="head" src="http://q1.qlogo.cn/g?b=qq&nk=1947504030&s=100" />
+	</div>
+	<h2 style=" margin-left:20px; color:#1E9FFF;" class="">使用说明</h2>
+	<div style="padding-left:30px;  ">
+	  <ul style="list-style-type:circle; ">
+		<li class="layui-text">1. 打开短视频视频APP，点开某个视频，点击分享按钮，在分享弹框中点击复制链接或通过分享到微信QQ等获取分享链接</li>
+		<li class="layui-text">2. 将刚才复制的链接粘贴到下面的输入框,点击解析</li>
+	  </ul>
+	</div>
+	<p style="color:red;font-size:25px; margin-top: 10px; text-align: center;">点我查看视频教程</p>
+
+	<div style="margin-top:20px;" class="layui-form-item">
+	  <div class="layui-col-xs10 layui-col-xs-offset1 layui-col-md8 layui-col-md-offset2 layui-col-lg4 layui-col-lg-offset4">
+		<input  class="layui-input" placeholder="link">
+
+		<button id="btn-parse" onclick="parse();" style="margin-top:14px;" class="layui-btn-danger layui-btn layui-col-xs8 layui-col-xs-offset2 layui-col-md4 layui-col-md-offset4 layui-col-lg4 layui-col-lg-offset4">解析<i class="layui-icon layui-icon-search"></i> </button>
+	  </div>
+	</div>
+
+	<ul class="layui-timeline">
+	  <li class="layui-timeline-item">
+		<i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+		<div class="layui-timeline-content layui-text">
+		  <h3 class="layui-timeline-title">2019.1.1</h3>
+		  <p>
+			新的一年先写个项目练练手 push text
+			<br>不枉近百个日日夜夜与之为伴。因小而大，因弱而强。
+			<br>无论它能走多远，抑或如何支撑？至少我曾倾注全心，无怨无悔 <i class="layui-icon"></i>
+		  </p>
+		</div>
+	  </li>
+	  <li class="layui-timeline-item">
+		<i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+		<div class="layui-timeline-content layui-text">
+		  <h3 class="layui-timeline-title">2019.1.13</h3>
+		  <p>
+			Cool parse的一切准备工作似乎都已到位。发布之弦，一触即发。
+			<br>不枉近百个日日夜夜与之为伴。因小而大，因弱而强。
+			<br>无论它能走多远，抑或如何支撑？至少我曾倾注全心，无怨无悔 <i class="layui-icon"></i>
+		  </p>
+		</div>
+	  </li>
+	</ul>
+	<div style="margin-top:80px;background-color: #03a9f4"  class="server-show-container ">
+	  <div class="server-show-title-container">
+		<p>国内机房</p>
+	  </div>
+	  <div class="server-show-msg-container">
+		<p>为你提供最优的体验速度</p>
+	  </div>
+	</div>
+	<div style="background-color: #2196f3"  class="server-show-container">
+	  <div class="server-show-title-container">
+		<p>独创算法</p>
+	  </div>
+	  <div class="server-show-msg-container">
+		<p>ApI接口均为良伟Api提供</p>
+	  </div>
+	</div>
+	<div style="background-color: #673ab7" class= "server-show-container">
+	  <div class="server-show-title-container">
+		<p>24H服务</p>
+	  </div>
+	  <div class="server-show-msg-container">
+		<p>服务器无间断运行，全时间段为你提供服务</p>
+	  </div>
+	</div>
+
+
+
+	<div style="border-bottom: 0px; background-color: #2f4056" class="server-show-container">
+	  <div class="server-show-title-container">
+		<p style="color: #01AAED;" class="layui-table-link">联系客服</p>
+	  </div>
+	  <div style="" class="">
+		<p class="t-center layui-text">良伟网络工作室</p>
+		<p class="layui-text t-center" style="font-size:10px;">备案信息</p>
+	  </div>
+
+	</div>
+
+
+  </body>
+
+
 </html>
 
