--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
 			<dl class="layui-nav-child ">
 				<dd class="t-right-nav" style=""><a href="">关于我们</a></dd>
 				<dd class="t-right-nav"><a href="">联系我们</a></dd>
-				<dd class="t-right-nav"><a class="" href="">加入我们</a></dd>
+				<dd class="t-right-nav"><a class="" href="">加入交流群</a></dd>
 			</dl>
 		</li>
 	</ul>
 </div>
 
-<p class="header-intro">本站现已支持解析<span>快手,抖音,微视,秒拍等</span>短视频平台 </p>
+<p class="header-intro">本站现已支持解析<span>快手,抖音,微视,秒拍，qq空间等</span>短视频平台 </p>
 <div class="t-center">
 	<img style="margin-top:5px; margin-bottom:10px;" class="head" src="http://q1.qlogo.cn/g?b=qq&nk=1947504030&s=100" />
 </div>
 <h2 style=" margin-left:20px; color:#1E9FFF;" class="">使用说明</h2>
 <div style="padding-left:30px;  ">
 	<ul style="list-style-type:circle; ">
-		<li class="layui-text">1. 打开短视频视频APP，点开某个视频，点击分享按钮，在分享弹框中点击复制链接或通过分享到微信QQ等获取分享链接</li>
+		<li class="layui-text">1. 打开短视频视频APP，点开某个视频，点击分享按钮，在分享弹框中点击<span>复制链接</span></li>
 		<li class="layui-text">2. 将刚才复制的链接粘贴到下面的输入框,点击解析</li>
 	</ul>
 </div>
-<p style="color:red;font-size:25px; margin-top: 10px; text-align: center;">点我查看视频教程</p>
+<p id="btn-video-course" style="color:red;font-size:25px; margin-top: 10px; text-align: center;">点我查看视频教程</p>
 
 <div style="margin-top:20px;" class="layui-form-item">
 	<div class="layui-col-xs10 layui-col-xs-offset1 layui-col-md8 layui-col-md-offset2 layui-col-lg4 layui-col-lg-offset4">
 		<input  class="layui-input" placeholder="link">
-		<input style="margin-top:14px;" class="layui-btn-danger layui-btn layui-col-xs8 layui-col-xs-offset2 layui-col-md4 layui-col-md-offset4 layui-col-lg4 layui-col-lg-offset4"type="button" value="解析">
+		<input style="margin-top:14px;" id="btn-parse" class="layui-btn-danger layui-btn layui-col-xs8 layui-col-xs-offset2 layui-col-md4 layui-col-md-offset4 layui-col-lg4 layui-col-lg-offset4"type="button" value="解析">
 	</div>
 </div>
 
